# tradebot

./: .dockerignore  .env.example  .env.paper  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 958719ad84ee_add_json_columns_to_backtest_runs.py  a3f8c1d2e4b6_add_price_bars_table.py  c7b0d2ff81b2_initial_schema.py  e61bf2a69b1d_add_backtest_runs_table.py
config/: settings.paper.toml  settings.toml
config/strategies/: xsp_credit_spread_put.yaml  xsp_debit_spread_call.yaml  xsp_iron_condor.yaml
docs/: architecture-research.md  broker-api-research.md  market-data-apis-and-libraries.md
docs/superpowers/plans/: 2026-03-16-tradebot-plan.md  2026-03-17-dashboard-and-docker.md  (+8 more)
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx
src/tradebot/: __init__.py  main.py
tests/integration/: test_event_flow.py  test_paper_pipeline.py
tests/unit/: test_analytics.py  test_api.py  test_backtest_broker.py  test_backtest_clock.py  test_backtest_data_source.py  test_backtest_engine.py  test_backtest_results.py  test_config.py  test_credit_spread.py  test_data_recorder.py  test_debit_spread.py  test_event_bus.py  test_kill_switch.py  test_models.py  test_order_manager.py  test_paper_broker.py  test_paper_data_source.py  test_persistence.py  test_portfolio.py  test_price_history.py  test_registry_new_strategies.py  test_risk_checks.py  test_strategies.py  test_tradier_broker.py
(+60 files in other folders)
